@@ -1,3 +1,6 @@
+2007/02/10
+.corrected parsing constraint_ref
+
 2007/02/08
 .added support for assumed_value in c_dv_quantity
 .the command line parser is created with missingLanguageCompatible falg set
